# Python

./: .gitignore  README.md
boostPython/: CMakeLists.txt
boostPython/helloWorld/: CMakeLists.txt  hello.cpp  hello.py
callingCFromPython/: CMakeLists.txt  README.md
callingCFromPython/include/: CMakeLists.txt  square.h
callingCFromPython/python/: CMakeLists.txt  setup.py.in  square_module.c
callingCFromPython/src/: CMakeLists.txt  square.c
callingPythonFromC/: CMakeLists.txt  callPythonFunc.c  pyfunc.py  setup.py.in
